# graphtk

./: .coverage  .coveragerc  LICENSE  README.md  adjacency_list.py  edges.py  graph.py  graph_coloring.py  graphs.py  gtk.py  main_gui.py  matrix_gui.py  pyproject.toml  pytest.ini  requirements-dev.txt  toolkit.py
.github/: FUNDING.yml
.github/workflows/: python-tests.yml
graphtk/: adjacency_list.py  graph_coloring.py  graph_init.py  graphs.py  matrix.py  toolkit.py
graphtk.egg-info/: PKG-INFO  SOURCES.txt
gtk/: toolkit.py
tests/: conftest.py  test_adjacency_list.py  test_graph_coloring.py  test_graph_init.py  test_graphs.py  test_matrix.py  test_toolkit.py
