[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtk"
version = "1.0.0"                   
description = "Graph Theory Toolkit (GTK)"
authors = [{name = "Ansh Soni", email = "developers.pyshell@gmail.com"}]  
readme = "README.md"               
requires-python = ">=3.7"          

[project.scripts]
pyshellcli = "gtk.main:main"  
